# magiwriter

./: README.md  main.py  pyproject.toml
models/: prediction.py
services/: factory.py  keras_predictor.py  sklearn_predictor.py
static/: index.html  writer.css  writer.js
trainer/: ModelBuilder.ipynb  keras.h5  svm_linear.joblib
usecases/: predict_image.py
